Use WindowOpenDispositions to open internal links in PDF Viewer.

When clicking on a link in a PDF to another page/position in the same
document, open in a new window (if shift was pressed) or a new tab
(if ctrl was pressed or if the click was on the middle button).

Use PDF open params to do so, specifying page and y position.

Bug: 720180
Change-Id: I535b707d592056a020033cbbd00a689f3de8e821
Reviewed-on: https://chromium-review.googlesource.com/1112479
Commit-Queue: Henrique Nakashima <hnakashima@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570108}
Former-commit-id: d0cada97bf36d36fb37fe254ac7de3c388ae03f6